objects/BusinessBuilderRules__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to hold the business builder reimbursement request rules used in the Dealer community custom pages.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplicableYears__c</fullName>
        <description>Text field to capture the applicable years for the categories</description>
        <inlineHelpText>Text field to capture the applicable years for the categories</inlineHelpText>
        <label>Applicable Years</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Reimbursement Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkpoint_Multiplier__c</fullName>
        <label>Quantity Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Used to hold the description text for each reimbursement level.</description>
        <inlineHelpText>Used to hold the description text for each reimbursement level.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JDEPARTNUMBER__c</fullName>
        <label>JDE PART NUMBER</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Reimbursement__c</fullName>
        <label>Max Reimbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Percentage__c</fullName>
        <label>Reimbursement Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Subcategory__c</fullName>
        <label>Reimbursement Subcategory</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>BusinessBuilderRules</label>
</CustomObject>